[package]
name = "sosachnet"
version = "0.1.0"
authors = ["starfear"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", features = ["full"] }
reqwest = { version = "*", features = ["json", "socks"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
rand = "*"
colored = "*"